<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.protegemos.protegemospersonas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_ips"
            app:destination="@id/nav_ips" />
        <action
            android:id="@+id/action_nav_home_to_nav_exe"
            app:destination="@id/nav_exe" />
        <action
            android:id="@+id/action_nav_home_to_nav_rev"
            app:destination="@id/nav_rev" />
        <action
            android:id="@+id/action_nav_home_to_nav_guia"
            app:destination="@id/nav_guia" />
    </fragment>

    <fragment
        android:id="@+id/nav_beneficiario"
        android:name="com.protegemos.protegemospersonas.ui.beneficiario.BeneficiarioFragment"
        android:label="@string/menu_beneficiario"
        tools:layout="@layout/fragment_beneficiario"/>

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.protegemos.protegemospersonas.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_sedes"
        android:name="com.protegemos.protegemospersonas.ui.sedes.SedesFragment"
        android:label="@string/menu_sedes"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_renovar"
        android:name="com.protegemos.protegemospersonas.ui.renovar.RenovarFragment"
        android:label="@string/menu_renovar"
        tools:layout="@layout/fragment_renovar" />
    <fragment
        android:id="@+id/nav_citas"
        android:name="com.protegemos.protegemospersonas.ui.citas.SolicitarCitaFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_solicitarcita"/>

    <fragment
        android:id="@+id/nav_contactanos"
        android:name="com.protegemos.protegemospersonas.ui.contactanos.ContactanosFragment"
        android:label="@string/menu_contactanos"
        tools:layout="@layout/fragment_contactanos" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.protegemos.protegemospersonas.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/nav_guia"
        android:name="com.protegemos.protegemospersonas.ui.guia.GuiaFragment"
        android:label="@string/menu_guia"
        tools:layout="@layout/fragment_guia" />

    <fragment
        android:id="@+id/nav_ips"
        android:name="com.protegemos.protegemospersonas.ui.ips.IpsFragment"
        android:label="@string/menu_ips"
        tools:layout="@layout/fragment_ips">
    <action
        android:id="@+id/action_nav_ips_to_nav_odontologia"
        app:destination="@id/nav_odontologia" />
    <action
        android:id="@+id/action_nav_ips_to_nav_optometria"
        app:destination="@id/nav_optometria" />
    <action
        android:id="@+id/action_nav_home_to_nav_laboratorio"
        app:destination="@id/nav_laboratorio" />
    </fragment>

    <fragment
        android:id="@+id/nav_exe"
        android:name="com.protegemos.protegemospersonas.ui.exequial.ExequialFragment"
        android:label="@string/menu_exe"
        tools:layout="@layout/fragment_exequial" />

    <fragment
        android:id="@+id/nav_rev"
        android:name="com.protegemos.protegemospersonas.ui.revista.RevistaFragment"
        android:label="@string/menu_rev"
        tools:layout="@layout/fragment_revista" />

    <!--SERVICIOS DE LA IPS-->
    <fragment
        android:id="@+id/nav_odontologia"
        android:name="com.protegemos.protegemospersonas.ui.servicioips.OdontologiaFragment"
        android:label="Servicios"
        tools:layout="@layout/popup_odontologia" />

    <fragment
        android:id="@+id/nav_optometria"
        android:name="com.protegemos.protegemospersonas.ui.servicioips.OptometriaFragment"
        android:label="Servicios"
        tools:layout="@layout/popup_optometria" />

    <fragment
        android:id="@+id/nav_laboratorio"
        android:name="com.protegemos.protegemospersonas.ui.servicioips.LaboratorioFragment"
        android:label="Servicios"
        tools:layout="@layout/popup_laboratorio" />

    <!--<fragment
        android:id="@+id/nav_solicitarCita"
        android:name="com.protegemos.protegemospersonas.ui.citas.SolicitarCitaFragment"
        android:label="Servicios"
        tools:layout="@layout/fragment_solicitarcita" />-->

</navigation>