<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColorHint="#000"
            android:textColor="#000"
            android:background="@drawable/inputcorner"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColorHint="#000"
            android:textColor="#000"
            android:background="@drawable/inputcorner"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:enabled="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="5dp"
            android:textColor="#ccc"
            android:text="@string/action_sign_in"
            android:background="@drawable/btn_fondo_color"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>







</RelativeLayout>